# maya-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/maya_mcp/: __init__.py  server.py
src/maya_mcp/mayatools/material/: create_material.py
src/maya_mcp/mayatools/object/: create_advanced_model.py  create_curve.py  create_object.py  curve_modeling.py  delete_object.py  duplicate_object.py  export_model.py  get_object_attributes.py  import_model.py  list_objects_by_type.py  mesh_operations.py  organize_objects.py  rename_object.py  set_object_attribute.py  set_object_transform_attributes.py
src/maya_mcp/mayatools/scene/: clear_selection_list.py  execute_code.py  generate_scene.py  get_scene_info.py  get_viewport_screenshot.py  scene_new.py  scene_open.py  scene_save.py  select_object.py
