[project]
name = "maya-mcp"
version = "1.1.15"
description = "Maya integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Duc Tran", email = "trandangtrungduc@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "supabase>=2.0.0",
    "tomli>=2.0.0",
]

[project.scripts]
maya-mcp = "maya_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"maya_mcp.mayatools" = ["**/*.py"]

[project.urls]
"Homepage" = "https://github.com/yourusername/maya-mcp"
"Bug Tracker" = "https://github.com/yourusername/maya-mcp/issues"
